<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    tools:context=".ui.activity.login.LoginActivity"
    tools:ignore="MissingPrefix">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_above="@+id/loginForm"
        android:transitionName="LOGOIMAGE"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_vietlott"/>

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_margin_normal"
        android:paddingRight="@dimen/default_margin_normal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconAccount"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/account"
                android:tint="@color/colorAccent"/>

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/iconAccount"
                android:background="@android:color/transparent"
                android:hint="@string/username"
                android:inputType="text"
                android:textColorHint="@color/colorDivider"/>


        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@null"
            android:src="@drawable/drawable_line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">


            <ImageView
                android:id="@+id/iconPassword"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/lock"
                android:tint="@color/colorAccent"/>

            <ImageView
                android:id="@+id/imgVisiblePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:tint="@color/colorAccent"
                android:src="@drawable/ic_visibility"/>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@id/imgVisiblePassword"
                android:layout_toRightOf="@id/iconPassword"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorDivider"/>

        </RelativeLayout>

        <Button
            android:id="@+id/loginButton"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_medium"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginForm"
        android:paddingLeft="@dimen/default_margin_normal"
        android:paddingRight="@dimen/default_margin_normal"
        android:layout_marginTop="@dimen/default_margin_small">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"/>
    </RelativeLayout>

    <!--<TextView-->
    <!--fontPath="fonts/MYRIADPRO-REGULAR.OTF"-->
    <!--android:id="@+id/forgotpassText"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="@dimen/default_margin_small"-->
    <!--android:layout_below="@id/loginForm"-->
    <!--android:hint="@string/username"-->
    <!--android:textSize="@dimen/text_size_medium"-->
    <!--android:textColor="@color/white"-->
    <!--android:text="@string/forgot_password"-->
    <!--/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="0.7"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llLoginFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/com_facebook_blue"
            android:clickable="true"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/com_facebook_button_icon_white"/>
            <TextView
                android:id="@+id/textLoginFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="@dimen/default_margin_normal"
                android:duplicateParentState="true"
                android:text="@string/connect_facebook"
                android:textColor="@color/selector_color_text_white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/google"/>
            <TextView
                android:id="@+id/textLoginGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="@dimen/default_margin_normal"
                android:duplicateParentState="true"
                android:text="@string/connect_google"
                android:textColor="@color/selector_color_text_white"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>


